--- a/distcode/js/widget/templates/calendar.html
+++ b/distcode/js/widget/templates/calendar.html
@@ -1,13 +1,17 @@
 <div>
-    <div class="CalerdarArrow">
-        <div data-dojo-attach-point="calendarPreviousMonthButtonAP"></div>
-    </div>
+        <div class="AvailabilityCalendars">
+            <div class="Calendars">
+                
+                <div class="CalendarArrow">
+                    <div data-dojo-attach-point="calendarPreviousMouthButtonAP"></div>
+                </div>
+                <div class="CalendarDijit">
+                    <span data-dojo-attach-point="calendarMonthOneAttachPoint"></span>
+                </div>
+                <div class="CalendarArrow">
+                    <div data-dojo-attach-point="calendarFollowingMonthButtonAP"></div>
+                </div>
     
-    <div class="CalendarDijit">
-        <span data-dojo-attach-point="calendarMonthOneAttachPoint"></span>
+            </div>
+        </div>
     </div>
-    
-    <div class="CalendarArrow">
-        <div data-dojo-attach-point="calendarFollowingMonthButtonAO"></div>
-    </div>
-</div>
